fix gap of components

--- a/src/app/oil/oil.component.scss
+++ b/src/app/oil/oil.component.scss
@@ -1,5 +1,6 @@
-.wdiget-width {
+.wdiget {
     width: 200px;
+    margin-top: 20px;
 }
 
 .container {
